// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overview-header Adds Contact Us button renders as expected 1`] = `
<div
  className="scroll-hidden border-b border--gray-light prose mb24"
>
  <h1
    className="mb6 txt-fancy"
  >
    Mapbox SDK for Breakfast
    
  </h1>
  <div
    className="relative"
  >
    <div
      className="pr12-ml mr240-ml mr0"
    >
      <p>
        <span>
          Current version: 
          <code>
            v
            0.1.0
          </code>
           
        </span>
        <a
          href="https://keepachangelog.com/en/0.3.0/"
        >
          View changelog
        </a>
      </p>
      <ul
        className="mb24"
        style={
          Object {
            "listStyle": "none",
          }
        }
      >
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Smooth scrambled eggs
          </div>
        </li>
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Vegetarian sausage
          </div>
        </li>
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Fruit syrups
          </div>
        </li>
      </ul>
      <div
        className="mb24"
      >
        <a
          className="btn txt-l round inline-block color-white unprose mr24"
          href="https://www.mapbox.com/contact/"
        >
          Contact us
        </a>
      </div>
    </div>
    <div
      className="none block-ml w240 absolute right top"
    >
      <img
        height={300}
        src="https://farm2.staticflickr.com/1790/29050447978_41e671dcd5_o.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`overview-header All props renders as expected 1`] = `
<div
  className="scroll-hidden border-b border--gray-light prose mb24"
>
  <h1
    className="mb6 txt-fancy"
  >
    Mapbox SDK for Breakfast
    
  </h1>
  <div
    className="relative"
  >
    <div
      className="pr12-ml mr240-ml mr0"
    >
      <p>
        <span>
          Current version: 
          <code>
            v
            0.1.0
          </code>
           
        </span>
        <a
          href="https://keepachangelog.com/en/0.3.0/"
        >
          View changelog
        </a>
      </p>
      <ul
        className="mb24"
        style={
          Object {
            "listStyle": "none",
          }
        }
      >
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Smooth scrambled eggs
          </div>
        </li>
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Vegetarian sausage
          </div>
        </li>
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Fruit syrups
          </div>
        </li>
      </ul>
      <div
        className="mb24"
      >
        <a
          className="btn txt-l round inline-block color-white unprose mr24"
          href="https://www.mapbox.com/install"
        >
          Install
        </a>
        <a
          className="inline-block unprose link"
          href="https://github.com/mapbox"
        >
          <span
            className="flex-parent flex-parent--center-cross"
          >
            <span
              className="flex-child mr6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-github"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
            <span
              className="flex-child"
            >
              Contribute on GitHub
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      className="none block-ml w240 absolute right top"
    >
      <img
        height={300}
        src="https://farm2.staticflickr.com/1790/29050447978_41e671dcd5_o.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`overview-header All, plus Contact Us button renders as expected 1`] = `
<div
  className="scroll-hidden border-b border--gray-light prose mb24"
>
  <h1
    className="mb6 txt-fancy"
  >
    Mapbox SDK for Breakfast
    
  </h1>
  <div
    className="relative"
  >
    <div
      className="pr12-ml mr240-ml mr0"
    >
      <p>
        <span>
          Current version: 
          <code>
            v
            0.1.0
          </code>
           
        </span>
        <a
          href="https://keepachangelog.com/en/0.3.0/"
        >
          View changelog
        </a>
      </p>
      <ul
        className="mb24"
        style={
          Object {
            "listStyle": "none",
          }
        }
      >
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Smooth scrambled eggs
          </div>
        </li>
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Vegetarian sausage
          </div>
        </li>
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Fruit syrups
          </div>
        </li>
      </ul>
      <div
        className="mb24"
      >
        <a
          className="btn txt-l round inline-block color-white unprose mr24"
          href="https://www.mapbox.com/install"
        >
          Install
        </a>
        <a
          className="btn txt-l round inline-block color-white unprose mr24"
          href="https://www.mapbox.com/contact/"
        >
          Contact us
        </a>
        <a
          className="inline-block unprose link"
          href="https://github.com/mapbox"
        >
          <span
            className="flex-parent flex-parent--center-cross"
          >
            <span
              className="flex-child mr6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-github"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
            <span
              className="flex-child"
            >
              Contribute on GitHub
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      className="none block-ml w240 absolute right top"
    >
      <img
        height={300}
        src="https://farm2.staticflickr.com/1790/29050447978_41e671dcd5_o.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`overview-header Beta product renders as expected 1`] = `
<div
  className="scroll-hidden border-b border--gray-light prose mb24"
>
  <h1
    className="mb6 txt-fancy"
  >
    Mapbox Potato SDK
    <span
      className="ml12 inline-block relative"
      style={
        Object {
          "top": "-7px",
        }
      }
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <div
          aria-describedby="tooltip-1"
          className="txt-s txt-bold round px6 ml6 inline-block cursor-default border border--green-light"
          style={
            Object {
              "backgroundColor": "rgb(232, 245, 238)",
              "color": "rgb(27, 125, 79)",
            }
          }
        >
          Beta
        </div>
        <div
          className="hide-visually"
          id="tooltip-1"
          role="tooltip"
        >
          <div
            className="txt-s wmax120"
          >
            This feature is in public beta and is subject to changes.
          </div>
        </div>
      </div>
    </span>
  </h1>
  <div
    className="relative"
  >
    <div
      className="pr12-ml mr240-ml mr0"
    >
      <ul
        className="mb24"
        style={
          Object {
            "listStyle": "none",
          }
        }
      >
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Chips
          </div>
        </li>
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Tots
          </div>
        </li>
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Fries
          </div>
        </li>
      </ul>
    </div>
    <div
      className="none block-ml w240 absolute right top"
    >
      <img
        height={499}
        src="https://farm2.staticflickr.com/1790/29050447978_41e671dcd5_o.jpg"
        width={800}
      />
    </div>
  </div>
</div>
`;

exports[`overview-header No optional props renders as expected 1`] = `
<div
  className="scroll-hidden border-b border--gray-light prose mb24"
>
  <h1
    className="mb6 txt-fancy"
  >
    Mapbox SDK that You've Never Heard Of
    
  </h1>
  <div
    className="relative"
  >
    <div
      className="pr12-ml mr240-ml mr0"
    >
      <ul
        className="mb24"
        style={
          Object {
            "listStyle": "none",
          }
        }
      >
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            a
          </div>
        </li>
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            b
          </div>
        </li>
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque cursus tristique orci, eget blandit justo. In quis ultrices ante. Mauris et vehicula arcu, et tincidunt mi. Integer eget tristique risus, eu tristique risus. Aliquam vel lectus eu magna finibus malesuada non a felis. Integer tincidunt rutrum urna ac mattis. Phasellus consequat tempus hendrerit.
          </div>
        </li>
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            c
          </div>
        </li>
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            d
          </div>
        </li>
      </ul>
    </div>
    <div
      className="none block-ml w240 absolute right top"
    >
      <img
        height={499}
        src="https://farm2.staticflickr.com/1790/29050447978_41e671dcd5_o.jpg"
        width={800}
      />
    </div>
  </div>
</div>
`;

exports[`overview-header Some optional props renders as expected 1`] = `
<div
  className="scroll-hidden border-b border--gray-light prose mb24"
>
  <h1
    className="mb6 txt-fancy"
  >
    Mapbox SDK for Breakfast
    
  </h1>
  <div
    className="relative"
  >
    <div
      className="pr12-ml mr240-ml mr0"
    >
      <p>
        <span>
          Current version: 
          <code>
            v
            0.1.0
          </code>
           
        </span>
      </p>
      <ul
        className="mb24"
        style={
          Object {
            "listStyle": "none",
          }
        }
      >
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Smooth scrambled eggs
          </div>
        </li>
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Vegetarian sausage
          </div>
        </li>
        <li
          className="ml-neg24 flex-parent"
        >
          <div
            className="flex-child flex-child--no-shrink mr6 m3 color-gray-light"
          >
            <svg
              className="events-none icon inline-block align-t"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
          <div
            className="flex-child flex-child--grow"
          >
            Fruit syrups
          </div>
        </li>
      </ul>
      <div
        className="mb24"
      >
        <a
          className="inline-block unprose link"
          href="https://github.com/mapbox"
        >
          <span
            className="flex-parent flex-parent--center-cross"
          >
            <span
              className="flex-child mr6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-github"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
            <span
              className="flex-child"
            >
              Contribute on GitHub
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      className="none block-ml w240 absolute right top"
    >
      <img
        height={300}
        src="https://farm2.staticflickr.com/1790/29050447978_41e671dcd5_o.jpg"
      />
    </div>
  </div>
</div>
`;
